Pygments changelog
==================

Since 2.5.0, issue numbers refer to the tracker at
<https://github.com/pygments/pygments/issues>,
pull request numbers to the requests at
<https://github.com/pygments/pygments/pulls>.


Version 2.11.0
--------------
(not released yet)

- Added lexers:

  * Maxima (#1885)
  * Savi (#1863)
  * Sed (#1935)
  * ``.SRCINFO`` (#1951)

- Updated lexers:

  * Bibtex: Distinguish between ``comment`` and ``commentary`` (#1899, #1806)
  * C family: Support unicode identifiers (#1848)
  * Debian control: Add missing fields (#1946)
  * Devicetree: Recognize hexadecimal addresses for nodes (#1949)
  * GDScript: Add ``void`` data type (#1948)
  * HTML, XML: Improve comment handling (#1896)
  * Java: Add ``yield`` (#1941)
  * Prolog: Support escaped ``\`` inside quoted strings (#1479)
  * RobotFramework: Improve empty brace handling (#1921, #1922)
  * Terraform: Add the 'set' type
  * Terraform: Support heredocs (#1909)

- Added styles:

  * Dracula (#1796)
  * One-Dark (#1924)

.. note::

  Both of the new styles do not conform to WCAG recommendations.

- There is new infrastructure in place to improve style accessibility. The default style has been updated to conform to WCAG recommendations. All styles are now checked for sufficient contrast by default to prevent regressions. (#1919, #1937, #1938, #1940)
- Clean up unused imports (#1887)
- Fix multiple lexers producing repeated single-character tokens
- Fix multiple lexers marking whitespace as ``Text`` (#1237, #1905, #1914, #1911, #1923, #1939)
- Remove duplicated assignments in the Paraiso style (#1934)
- ``pygmentize`` supports JSON output for the various list functions now, making it easier to consume them from scripts. (#1437, #1890)
- Use the ``shell`` lexer for ``kshrc`` files (#1947)
- Use the ``ruby`` lexer for ``Vagrantfile`` files (#1936)
- Add a ``groff`` formatter (#1873)


Version 2.10.0
--------------
(released August 15th, 2021)

- Added lexers:
