@@ -40,5 +40,6 @@
   "gruvbox-dark": 4.0,
   "gruvbox-light": 3.2,
   "dracula": 1.4,
-  "one-dark": 3.7
+  "one-dark": 3.7,
+  "lilypond": 2.3
 }
